--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "4.0.3",
     "sass": "^1.55.0",
+    "socket.io": "^4.5.2",
+    "socket.io-client": "^4.5.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
