--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^29.1.2",
+    "@types/node": "^18.8.5",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
     "axios": "^1.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -16,6 +20,7 @@
     "sass": "^1.55.0",
     "socket.io": "^4.5.2",
     "socket.io-client": "^4.5.2",
+    "typescript": "^4.8.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
